Repo link updates and .github templates added

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BPXL Redux Todomvc example</title>
+    <title>Black Pixel Redux TodoMVC Example</title>
   </head>
   <body>
     <div class="todoapp" id="root" />
